--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ bin/*
 /CMDHighlighter/CMDHighlighter.dres
 /CMDHighlighter/CMDHighlighter.res
 /CMDHighlighter/CMDHighlighterResource.rc
+/CMDHighlighter/*.~dsk
